--- a/web/src/css/output.css
+++ b/web/src/css/output.css
@@ -8,13 +8,13 @@
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
     --color-green-200: oklch(92.5% 0.084 155.995);
+    --color-green-400: oklch(79.2% 0.209 151.711);
+    --color-green-600: oklch(62.7% 0.194 149.214);
     --color-blue-200: oklch(88.2% 0.059 254.128);
-    --color-blue-500: oklch(62.3% 0.214 259.815);
     --color-gray-200: oklch(92.8% 0.006 264.531);
     --spacing: 0.25rem;
-    --container-3xl: 48rem;
+    --container-lg: 32rem;
     --container-5xl: 64rem;
-    --container-6xl: 72rem;
     --font-weight-bold: 700;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
@@ -169,6 +169,9 @@
   }
 }
 @layer utilities {
+  .invisible {
+    visibility: hidden;
+  }
   .col-span-2 {
     grid-column: span 2 / span 2;
   }
@@ -190,6 +193,9 @@
   .grid {
     display: grid;
   }
+  .hidden {
+    display: none;
+  }
   .min-h-screen {
     min-height: 100vh;
   }
@@ -198,6 +204,9 @@
   }
   .max-w-5xl {
     max-width: var(--container-5xl);
+  }
+  .min-w-lg {
+    min-width: var(--container-lg);
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -218,6 +227,9 @@
   }
   .bg-gray-200 {
     background-color: var(--color-gray-200);
+  }
+  .bg-green-600 {
+    background-color: var(--color-green-600);
   }
   .p-4 {
     padding: calc(var(--spacing) * 4);
@@ -240,6 +252,15 @@
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
+  }
+  .text-green-200 {
+    color: var(--color-green-200);
+  }
+  .text-green-400 {
+    color: var(--color-green-400);
+  }
+  .text-green-600 {
+    color: var(--color-green-600);
   }
   .underline {
     text-decoration-line: underline;
